fix services section on mobile

--- a/app/css/footer_style.css
+++ b/app/css/footer_style.css
@@ -196,33 +196,39 @@ textarea {
 
 .wrapper_social ul li:hover.facebook {
   border: 2px solid #3b5998;
-  transition: border 0.5s
-}
+  -webkit-transition: border 0.5s;
+  -o-transition: border 0.5s;
+  transition: border 0.5s; }
 
 .wrapper_social ul li:hover .fa-facebook {
   color: #3b5998;
-  transition: color 0.5s
-}
+  -webkit-transition: color 0.5s;
+  -o-transition: color 0.5s;
+  transition: color 0.5s; }
 
 .wrapper_social ul li:hover.twitter {
   border: 2px solid #00aced;
-  transition: border 0.5s
-}
+  -webkit-transition: border 0.5s;
+  -o-transition: border 0.5s;
+  transition: border 0.5s; }
 
 .wrapper_social ul li:hover .fa-twitter {
   color: #00aced;
-  transition: color 0.5s
-}
+  -webkit-transition: color 0.5s;
+  -o-transition: color 0.5s;
+  transition: color 0.5s; }
 
 .wrapper_social ul li:hover.google {
   border: 2px solid #dd4b39;
-  transition: border 0.5s
-}
+  -webkit-transition: border 0.5s;
+  -o-transition: border 0.5s;
+  transition: border 0.5s; }
 
 .wrapper_social ul li:hover .fa-linkedin {
   color: #dd4b39;
-  transition: color 0.5s
-}
+  -webkit-transition: color 0.5s;
+  -o-transition: color 0.5s;
+  transition: color 0.5s; }
 
 .bottom_intro {
   margin-top: 80px; }
