--- a/app/sass/content_style.sass
+++ b/app/sass/content_style.sass
@@ -74,7 +74,11 @@
 		width: 50%
 		&:hover
 			cursor: pointer
+			path.svg__st
+				stroke: none
+				fill: #a81060
 			& .svg__st
+				// fill: #a81060
 				stroke: #a81060
 				transition: all .5s ease
 			& .services__img--info
@@ -110,7 +114,7 @@
 	&__img--info
 		width: 30px
 		height: 30px
-		border: 2px solid #ae206a
+		border: 2px solid #a70c5d
 		border-radius: 50%
 		padding: 5px
 		float: left
@@ -287,14 +291,21 @@
 
 
 @media screen and (max-width: 1080px)
+	.services 
+		padding-bottom: 20px
 	.services__container>header
 		padding: 0 20px
+	.services__subtitle--main
+		padding: 0 20px 0 20px
 	.services__content
-		padding: 30px 40px 0 40px
+		padding: 0px 40px 0px 40px
 		flex-direction: column
+	.services__content:first-of-type
+		padding-bottom: 0
 	.services__block
 		display: block
 		width: 100%
+		padding-top: 10px
 	.services__img--service
 		display: block
 		width: 100%
@@ -305,10 +316,12 @@
 		width: 100%
 		padding: 0
 		text-align: center
-	.block__text
-	.block__parag
+	.services__subtitle--block
+		padding: 0 5px 0 5px
 	.services__img--info
 		display: none
+	.services__parag
+		display: flex
 	.reviews__content
 		flex-direction: column
 		padding: 80px 50px 0 50px	
